# ai-devops-agent

./: .env.example  50_ai_prompts.txt  CLAUDE.md  README.md  ai_devops_knowledge.txt  aks_requirements.txt  app.py  infrastructure_standards.txt  pyproject.toml  requirements.txt  start-dev.sh
backend/: main.py
backend/api/routes/: analytics.py  health.py  infrastructure.py
backend/core/: config.py
backend/services/: cloud_agent.py  cloud_providers.py  llm_gateway.py  mcp_context7.py  prompt_templates.py  security_validator.py  web_search.py
data/cache/: gptcache.db
docs/: openrouter-setup.md
frontend/: package-lock.json  package.json  simple-server.js
frontend/src/: index.js  server.ts
scripts/: setup.py
src/: __init__.py
src/agents/: __init__.py  architect_agent.py  cost_agent.py  deployment_agent.py  monitoring_agent.py  security_agent.py
src/config/: __init__.py  config.py
src/core/: __init__.py  azure_resource_manager.py  intelligent_agent.py
src/database/: __init__.py  database.py
src/llm/: __init__.py  llm_providers.py
src/ui/: enhanced_streamlit_app.py
