[project]
name = "ai-devops-agent"
version = "2.0.0"
description = "AI-powered cloud infrastructure platform with Context7 MCP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI DevOps Agent", email = "contact@example.com"}
]
keywords = ["ai", "devops", "cloud", "infrastructure", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core Backend Dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client for MCP
    "httpx>=0.25.2",
    
    # LLM Gateway
    "litellm>=1.17.9",
    "openai>=1.6.1",
    "google-generativeai>=0.3.2",
    "pydantic-ai>=0.0.12",
    
    # Web Search for current info
    "beautifulsoup4>=4.12.2",
    "duckduckgo-search>=3.9.6",
    
    # Cloud Provider SDKs
    "boto3>=1.34.12",
    "azure-identity>=1.15.0",
    "azure-mgmt-resource>=23.0.1",
    "azure-mgmt-compute>=30.4.0",
    "azure-mgmt-network>=25.0.0",
    "google-cloud-compute>=1.14.1",
    "google-auth>=2.25.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    
    # Semantic Caching
    "gptcache>=0.1.43",
    "onnxruntime>=1.17.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-devops-agent"
Documentation = "https://github.com/your-org/ai-devops-agent#readme"
Repository = "https://github.com/your-org/ai-devops-agent.git"
Issues = "https://github.com/your-org/ai-devops-agent/issues"

[project.scripts]
ai-devops-agent = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true